--- a/resources/lang/en/screens/profile.en.json
+++ b/resources/lang/en/screens/profile.en.json
@@ -17,6 +17,7 @@
         "exile": "exile cat",
         "exile_df": "exile to dark forest",
         "guide_sc": "guide into starclan",
+        "send_ur": "send to UR",
         "exile_tooltip": "This cannot be reversed.",
         "exile_guide_tooltip": "Changing where this cat resides will change where your Clan goes after death.",
         "kill_cat": "kill cat",
